# nodepm

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/workflows/: cargo.yml  cargo_full.yml  rust-clippy.yml  rust.yml
docs/doc/: crates.js  search-index.js  source-files.js
docs/doc/implementors/clap/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js  trait.Subcommand.js
docs/doc/implementors/core/fmt/: trait.Debug.js
docs/doc/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/doc/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/doc/nodepm/: all.html  constant.REGISTRY_HOST.html  fn.create_project_manifest.html  fn.query_package_reqistry.html  index.html  sidebar-items.js
docs/doc/nodepm/cli/: enum.Commands.html  index.html  sidebar-items.js  struct.Cli.html
docs/doc/nodepm/nodepm/: index.html
docs/doc/nodepm/nodepm/package/: fn.query_package_reqistry.html  index.html  sidebar-items.js  struct.NPMPackageInfo.html
docs/doc/nodepm/nodepm/project/: fn.create_project_manifest.html  index.html  sidebar-items.js
docs/doc/src/nodepm/: main.rs.html
docs/doc/src/nodepm/nodepm/: mod.rs.html  package.rs.html  project.rs.html
npm_registry_reference/: README.md
src/: cli.rs  main.rs
src/nodepm/: error.rs  mod.rs  package.rs  project.rs
