[package]
name = "nodepm"
version = "0.1.0"
edition = "2021"
description = "A Node.js project manager"
homepage = "https://github.com/drazisil/nodepm"
repository = "https://github.com/drazisil/nodepm"
authors = ["Drazi Crendraven <drazisil@hey.com>"]
licence = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
json = "0.12.4"
serde = "1.0.137"
serde_json = "1.0.81"
ureq = { version = "2.4.0", features = ["json"]}