[package]
name = "nodepm"
version = "0.1.0"
edition = "2021"
description = "A Node.js project manager"
homepage = "https://github.com/drazisil/nodepm"
repository = "https://github.com/drazisil/nodepm"
authors = ["Drazi Crendraven <drazisil@hey.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
documentation = "https://docs.rs/nodepm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicli = "0.4"
structopt = "0.3.26"
json = "0.12.4"
serde = "1.0.137"
serde_json = "1.0.81"
ureq = { version = "2.4.0", features = ["json"]}